--- a/package.json
+++ b/package.json
@@ -41,10 +41,8 @@
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-social-icons": "^6.7.0",
-    "react-spinners": "^0.13.8",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "use-react-countries": "^2.0.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/google.maps": "^3.55.11",
