--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
+    "@strapi/blocks-react-renderer": "^1.0.1",
     "@types/negotiator": "^0.6.3",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
@@ -29,6 +30,7 @@
     "i18next-http-backend": "^2.5.2",
     "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.446.0",
+    "motion": "^11.17.0",
     "negotiator": "^0.6.3",
     "next": "15.1.3",
     "next-auth": "^4.24.5",
