--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@formatjs/intl-localematcher": "^0.5.4",
     "@googlemaps/js-api-loader": "^1.16.6",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@react-google-maps/api": "^2.19.3",
     "@strapi/blocks-react-renderer": "^1.0.1",
     "@types/negotiator": "^0.6.3",
@@ -39,12 +41,14 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-geocode": "^1.0.0-alpha.1",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-social-icons": "^6.7.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/google.maps": "^3.55.11",
