--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@react-google-maps/api": "^2.19.3",
     "@strapi/blocks-react-renderer": "^1.0.1",
@@ -26,6 +28,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.0.0-alpha.0",
+    "googleapis": "^144.0.0",
     "html-react-parser": "^5.0.11",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
@@ -39,15 +42,18 @@
     "node-fetch": "^3.3.2",
     "qs": "^6.13.0",
     "react": "19.0.0",
+    "react-calendly": "^4.3.1",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "19.0.0",
     "react-geocode": "^1.0.0-alpha.1",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.53.1",
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-social-icons": "^6.7.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -58,7 +64,7 @@
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "5.7.3"
   },
   "overrides": {
     "@types/react": "19.0.2",
