--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "embla-carousel-react": "^8.3.0",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.0.0-alpha.0",
     "googleapis": "^144.0.0",
     "html-react-parser": "^5.0.11",
@@ -35,6 +35,7 @@
     "i18next-http-backend": "^2.5.2",
     "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.446.0",
+    "markdown-to-jsx": "^7.7.3",
     "motion": "^11.17.0",
     "negotiator": "^0.6.3",
     "next": "15.1.3",
